--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,54 @@
 .vs/
+.vscode/
+ipch/
+Debug/
+Release/
+x64/
+x86/
+[Dd]ebug/
+[Rr]elease/
+[Bb]in/
+[Oo]bj/
+OpenGLMe.*/
+*.opensdf
+*.opendb
+*.sdf
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
+*.aps
+*.ncb
+*.cachefile
+*.VC.db
+*.VC.VC.opendb
+*.pch
+*.o
+*.obj
+*.lo
+*.slo
+*.dll
+*.lib
+*.a
+*.lai
+*.la
+*.exe
+*.out
+*.app
+*.log
+*.ilk
+*.pdb
+*.idb
+*.exp
+*.res
+*.tlog
+*.lastbuildstate
+.DS_Store
+*.tmp
+*.temp
+*.swp
+*~
+UpgradeLog*.htm
+UpgradeLog*.XML
+*=True
+*=False
