--- a/OpenGLMeshLoader.vcxproj
+++ b/OpenGLMeshLoader.vcxproj
@@ -87,13 +87,13 @@
     <ClCompile Include="Model_3DS.cpp" />
     <ClCompile Include="OpenGLMeshLoader.cpp" />
     <ClCompile Include="FlightController.cpp" />
-
+    <ClCompile Include="Vector3f.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GLTexture.h" />
     <ClInclude Include="Model_3DS.h" />
     <ClInclude Include="FlightController.h" />
-
+    <ClInclude Include="Vector3f.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
