--- a/OpenGLMeshLoader.vcxproj
+++ b/OpenGLMeshLoader.vcxproj
@@ -80,17 +80,24 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <None Include="GIT_IGNORE_REFERENCE.md" />
     <None Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="GLTexture.cpp" />
+    <ClCompile Include="Level.cpp" />
+    <ClCompile Include="Level2.cpp" />
     <ClCompile Include="Model_3DS.cpp" />
     <ClCompile Include="OpenGLMeshLoader.cpp" />
     <ClCompile Include="FlightController.cpp" />
     <ClCompile Include="Vector3f.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="GameManager.h" />
     <ClInclude Include="GLTexture.h" />
+    <ClInclude Include="Level.h" />
+    <ClInclude Include="Level2.h" />
     <ClInclude Include="Model_3DS.h" />
     <ClInclude Include="FlightController.h" />
     <ClInclude Include="Vector3f.h" />
