--- a/OpenGLMeshLoader.vcxproj
+++ b/OpenGLMeshLoader.vcxproj
@@ -91,6 +91,7 @@
     <ClCompile Include="Model_3DS.cpp" />
     <ClCompile Include="OpenGLMeshLoader.cpp" />
     <ClCompile Include="FlightController.cpp" />
+    <ClCompile Include="ParticleEffects.cpp" />
     <ClCompile Include="SmokeSystem.cpp" />
     <ClCompile Include="SkySystem.cpp" />
     <ClCompile Include="Vector3f.cpp" />
@@ -102,6 +103,7 @@
     <ClInclude Include="Level2.h" />
     <ClInclude Include="Model_3DS.h" />
     <ClInclude Include="FlightController.h" />
+    <ClInclude Include="ParticleEffects.h" />
     <ClInclude Include="SmokeSystem.h" />
     <ClInclude Include="SkySystem.h" />
     <ClInclude Include="Vector3f.h" />
