--- a/OpenGLMeshLoader.vcxproj
+++ b/OpenGLMeshLoader.vcxproj
@@ -88,11 +88,14 @@
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="GLTexture.cpp" />
     <ClCompile Include="Level.cpp" />
+    <ClCompile Include="Level1.cpp" />
     <ClCompile Include="Level2.cpp" />
     <ClCompile Include="Model_3DS.cpp" />
     <ClCompile Include="OpenGLMeshLoader.cpp" />
     <ClCompile Include="FlightController.cpp" />
     <ClCompile Include="ParticleEffects.cpp" />
+    <ClCompile Include="ShadowSystem.cpp" />
+    <ClCompile Include="ShootingSystem.cpp" />
     <ClCompile Include="SmokeSystem.cpp" />
     <ClCompile Include="SkySystem.cpp" />
     <ClCompile Include="SoundSystem.cpp" />
@@ -103,10 +106,13 @@
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="GLTexture.h" />
     <ClInclude Include="Level.h" />
+    <ClInclude Include="Level1.h" />
     <ClInclude Include="Level2.h" />
     <ClInclude Include="Model_3DS.h" />
     <ClInclude Include="FlightController.h" />
     <ClInclude Include="ParticleEffects.h" />
+    <ClInclude Include="ShadowSystem.h" />
+    <ClInclude Include="ShootingSystem.h" />
     <ClInclude Include="SmokeSystem.h" />
     <ClInclude Include="SkySystem.h" />
     <ClInclude Include="SoundSystem.h" />
